# GAES4QCO

./: .gitignore  README.md  Untitled.ipynb  class.py  functions.py  main.py  projeto.md  pyproject.toml  requeriment.txt  utils.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Antigo/: Seed100-109.ipynb  main.py
configuration/: gate.json
results/: results_seed_0.json  results_seed_1.json  results_seed_2.json  results_seed_3.json  results_seed_4.json
tests/: test_01_ToToB_baseline.json  test_01_baseline.json  test_02_ToToB_stepsize.json  test_02_stepsize.json  test_03_adaptive_rates.json  test_03_adaptiverates.json  test_04_fitness_sharing.json  test_04_fitnesssharing.json  test_05_bandit_mutation.json  test_06_ToToB_full_hybrid.json  test_06_full_hybrid.json  test_07_weighted_fitness.json  test_09_stepsize_weightedfitness.json  test_1.json  test_10_stepsize_fitnesssharing.json  test_11_ToToB_stepsize_banditmutation.json  test_12_stepsize_adaptiverates_fitnesssharing.json  test_13_ToToB_stepsize_adaptiverates_weightedfitness.json  test_15_stepsize_weightedfitness_fitnesssharing.json  test_16_stepsize_weightedfitness_banditmutation.json  test_17_stepsize_fitnesssharing_banditmutation.json  test_18_stepsize_adaptiverates_fitnesssharing_weightedfitness.json  test_19_stepsize_adaptiverates_fitnesssharing_banditmutation.json  test_20_ToToM_baseline.json  test_22_ToToM_adaptiverates.json  test_23_ToToM_fitnesssharing.json  test_24_ToToM_banditmutation.json  test_29_ToToM_stepsize_fitnesssharing.json  test_35_ToToM_stepsize_weightedfitness_banditmutation.json  (+21 more)
(+185 files in other folders)
