[project]
name = "GAES4QCO"
version = "0.1.0"
description = "Pacote para otimização de Circuitos Quânticos"
authors = []
dependencies = [
]
readme = "README.md"
requires-python = ">=3.9 "
license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"GAES4QCO" = ["data/*", "models/*"]

[tool.setuptools.packages.find]
include = ["GAES4QCO*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
onsafety-ia-epi = "GAES4QCO.arquivo:main"