[project]
name = "gaes4qco"
version = "0.1.0"
description = "Pacote para otimização de Circuitos Quânticos"
authors = []
dependencies = [
    "qiskit",
    "numpy",
    "dependency-injector"
]
readme = "README.md"
requires-python = ">=3.9 "
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "qiskit-ibm-runtime",
    "pytest",  # É uma boa prática incluir outras ferramentas de dev aqui
    "black",   # Exemplo: formatador de código
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"GAES4QCO" = ["data/*", "models/*"]

[tool.setuptools.packages.find]
include = ["GAES4QCO*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
onsafety-ia-epi = "GAES4QCO.arquivo:main"